--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root {
+  position: relative;
+  height: 100vh;
+}
